# src/routes/index.ts
@@ -3,13 +3,12 @@ import authRoutes from "./auth.routes";
 import employeeRoutes from "./employee.routes";
 import employerRoutes from "./employer.routes";
 import marketerRoutes from "./marketer.routes";
+import adminRoutes from "./admin.routes";
+import { employerController } from "../controllers/employer.controller";
 import { healthCheckRoutes } from "./health.routes";
-// import { employerRoutes } from "./employer.routes";
-// import { web3Routes } from "./web3.routes";
-// import { adminRoutes } from "./admin.routes";
 
 export const setupRoutes = (app: Express) => {
-  const apiPrefix = `/api/${process.env.API_VERSION || "v1"}`;
+  // const apiPrefix = `/api/${process.env.API_VERSION || "v1"}`;
 
   // Health check route
   app.use(`/api/v1/health`, healthCheckRoutes);
@@ -19,7 +18,12 @@ export const setupRoutes = (app: Express) => {
   app.use(`/api/v1/employee`, employeeRoutes);
   app.use(`/api/v1/employer`, employerRoutes);
   app.use(`/api/v1/marketer`, marketerRoutes);
-
+  app.use("/api/v1/admin", adminRoutes);
+  app.post(
+    "/api/v1/employer/accept-invite",
+    employerController.employerRegister,
+  );
+  //
   // Root route
   app.get("/", (req, res) => {
     res.json({
